--- a/index.css
+++ b/index.css
@@ -3,3 +3,10 @@
 body {
   @apply box-border m-0 p-0 font-sans overflow-y-scroll mt-[70px];
 }
+.hide-scrollbar {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
