--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 @import "tailwindcss";
 
 body {
-  @apply box-border m-0 p-0 font-sans overflow-y-scroll mt-[70px];
+  @apply box-border m-0 p-0 font-sans overflow-y-scroll pt-[70px];
 }
 .hide-scrollbar {
   -ms-overflow-style: none;
