improved the tailwind config

--- a/src/index.css
+++ b/src/index.css
@@ -2,16 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
-  @apply box-border m-0 p-0 font-sans overflow-y-scroll pt-[70px];
+@layer base {
+  body {
+    @apply box-border m-0 p-0 font-sans overflow-y-scroll pt-[70px];
+  }
 }
 
-.hide-scrollbar {
-  @apply overflow-y-scroll;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
-}
+@layer components {
+  .hide-scrollbar {
+    @apply overflow-y-scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
+  }
 
-.hide-scrollbar::-webkit-scrollbar {
-  display: none;
+  .hide-scrollbar::-webkit-scrollbar {
+    display: none;
+  }
 } 
